# RemoteControl

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/res/drawable/: dialog_bg.xml  dialog_cancle.xml  dialog_sure.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
lib-net/: build.gradle
lib-net/src/main/: AndroidManifest.xml
lib-player/: CMakeLists.txt  build.gradle
lib-player/src/androidTest/java/com/orbyun/player/: ExampleInstrumentedTest.java
lib-player/src/main/: AndroidManifest.xml
lib-player/src/main/cpp/: com_orbyun_player_PlayManager.h  playtools.cpp  playtools.h
lib-player/src/main/java/com/orbyun/player/: PlayActivity.java  PlayManager.java
lib-player/src/main/res/layout/: activity_play.xml
lib-player/src/test/java/com/orbyun/player/: ExampleUnitTest.java
lib-utils/: build.gradle
lib-utils/src/main/: AndroidManifest.xml
lib_rtmp/: CMakeLists.txt  build.gradle
lib_rtmp/src/androidTest/java/com/orbyun/rtmp/: ExampleInstrumentedTest.java
lib_rtmp/src/main/: AndroidManifest.xml
lib_rtmp/src/main/cpp/: com_orbyun_rtmp_NativeUtils.h  jniutils.cpp  jniutils.h  log.h
lib_rtmp/src/main/cpp/librtmp/: rtmp.c
lib_rtmp/src/main/java/com/orbyun/rtmp/: NativeUtils.java
lib_rtmp/src/test/java/com/orbyun/rtmp/: ExampleUnitTest.java
vitamio/: build.gradle
vitamio/src/main/: AndroidManifest.xml
(+114 files in other folders)
